--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.2.0",
+    "axios": "^1.4.0",
     "dom": "^0.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router": "^6.14.2"
+    "react-hook-form": "^7.45.4",
+    "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
     "@types/node": "^20.4.8",
